--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <head>
   <title>Nekolicious!</title>
+  <meta charset="UTF-8">
+  <meta name="description" content="">
+  <meta name="author" content="Nekolicious a.k.a Nekocia">
 </head>
 <body>
   <p>Umm, its not done yet xD</p>
