--- a/index.html
+++ b/index.html
@@ -1,10 +1,75 @@
 <!DOCTYPE html>
+<html>
+
 <head>
-  <title>Nekolicious!</title>
-  <meta charset="UTF-8">
-  <meta name="description" content="">
-  <meta name="author" content="Nekolicious a.k.a Nekocia">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Nekolicious | Home</title>
+    <link rel="shortcut icon" type="image/x-icon" href="assets/image/favicon.ico">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-min.css">
+    <link rel="stylesheet" href="assets/bootstrap/css/nekolized.css">
+
+    <style>
+        .bd-placeholder-img {
+            font-size: 1.125rem;
+            text-anchor: middle;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+        }
+        
+        @media (min-width: 768px) {
+            .bd-placeholder-img-lg {
+                font-size: 3.5rem;
+            }
+        }
+    </style>
 </head>
-<body>
-  <p>Umm, its not done yet xD</p>
+
+<body class="text-center bg-dark">
+    <header class="mb-auto">
+        <nav class="navbar fixed-top navbar-dark bg-dark">
+            <a class="navbar-brand" href="#">
+                <img src="assets/image/nekolicious-n.png" width="50" height="50" class="d-inline-block align-top" alt="Nekolicious"></a>
+            <form class="form-inline">
+                <input class="form-control mr-sm-2" type="search" placeholder="Need Something?" aria-label="Search">
+                <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
+            </form>
+        </nav>
+    </header>
+
+    <div class="container-fluid bg-dark text-white bg-dark">
+        <div class="row">
+            <div class="col align-self-center align-item-center">
+                <!--Logo and Text-->
+                <div class="container-fluid bg-dark ">
+                    <h1 class="cover-heading ">
+                        <img class="img-fluid " src="assets/image/nekolicious-text.png ">
+                    </h1>
+                    <p class="lead ">I trust in your smile, i won't care whether you are soulless or not.</p>
+                </div>
+
+                <!--Socmed-->
+                <div class="container-fluid py-5 ">
+                    <a class="btn btn-facebook " type="facebook " role="button " href="https://facebook.com/Nekociaa ">
+                        <img src="assets/image/facebook.png " width="20 " height="20 "> Facebook
+                    </a>
+                    <a class="btn btn-telegram " type="telegram " role="button " href="https://t.me/Nekocia ">
+                        <img src="assets/image/telegram.png " width="20 " height="20 "> Telegram
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <!--Footer-->
+        <footer class="footer fixed-bottom">
+            <div class="container bg-dark ">
+                <p>© 2020 Nekolicious, by <a href="https://t.me/Nekocia ">Nekocia</a>.</p>
+            </div>
+        </footer>
+    </div>
 </body>
+
+</html>
