--- a/index.html
+++ b/index.html
@@ -29,16 +29,18 @@
 </head>
 
 <body class="text-center bg-dark">
-    <header class="mb-auto">
-        <nav class="navbar fixed-top navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">
-                <img src="assets/image/nekolicious-n.png" width="50" height="50" class="d-inline-block align-top" alt="Nekolicious"></a>
-            <form class="form-inline">
-                <input class="form-control mr-sm-2" type="search" placeholder="Need Something?" aria-label="Search">
-                <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
-            </form>
-        </nav>
-    </header>
+    <div class="container my-5 py-5">
+        <header class="mb-auto">
+            <nav class="navbar fixed-top navbar-dark bg-dark">
+                <a class="navbar-brand" href="#">
+                    <img src="assets/image/nekolicious-n.png" width="50" height="50" class="d-inline-block align-top" alt="Nekolicious"></a>
+                <form class="form-inline">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Need Something?" aria-label="Search">
+                    <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
+                </form>
+            </nav>
+        </header>
+    </div>
 
     <div class="container-fluid bg-dark text-white bg-dark">
         <div class="row">
