--- a/index.html
+++ b/index.html
@@ -7,23 +7,9 @@
     <title>Nekolicious | Home</title>
     <link rel="shortcut icon" type="image/x-icon" href="assets/image/favicon.ico">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/nekolized.css">
-
+    <link rel="stylesheet" href="css/nekolized.css">
     <style>
-        .bd-placeholder-img {
-            font-size: 1.125rem;
-            text-anchor: middle;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
-            user-select: none;
-        }
-        
-        @media (min-width: 768px) {
-            .bd-placeholder-img-lg {
-                font-size: 3.5rem;
-            }
-        }
+
     </style>
 </head>
 
@@ -35,7 +21,7 @@
                     <img src="assets/image/nekolicious-n.png" width="50" height="50" class="d-inline-block align-top" alt="Nekolicious"></a>
                 <form class="form-inline">
                     <input class="form-control mr-sm-2" type="search" placeholder="Need Something?" aria-label="Search">
-                    <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
+                    <button class="btn btn-outline-neko my-2 my-sm-0" type="submit">Search</button>
                 </form>
             </nav>
         </header>
