--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     </style>
 </head>
 
-<body class="text-center bg-dark">
+<body class="text-center bg-neko">
     <div class="container my-5 py-5">
         <header class="mb-auto">
-            <nav class="navbar fixed-top navbar-dark bg-dark">
+            <nav class="navbar fixed-top navbar-dark bg-neko">
                 <a class="navbar-brand" href="#">
                     <img src="assets/image/nekolicious-n.png" width="50" height="50" class="d-inline-block align-top" alt="Nekolicious"></a>
                 <form class="form-inline">
@@ -27,11 +27,11 @@
         </header>
     </div>
 
-    <div class="container-fluid bg-dark text-white bg-dark">
+    <div class="container-fluid bg-neko text-white bg-neko">
         <div class="row">
             <div class="col align-self-center align-item-center">
                 <!--Logo and Text-->
-                <div class="container-fluid bg-dark ">
+                <div class="container-fluid bg-neko ">
                     <h1 class="cover-heading ">
                         <img class="img-fluid " src="assets/image/nekolicious-text.png ">
                     </h1>
@@ -52,7 +52,7 @@
 
         <!--Footer-->
         <footer class="footer fixed-bottom">
-            <div class="container bg-dark ">
+            <div class="container bg-neko ">
                 <p>© 2020 Nekolicious, by <a href="https://t.me/Nekocia ">Nekocia</a>.</p>
             </div>
         </footer>
