--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Nekolicious | Home</title>
     <link rel="shortcut icon" type="image/x-icon" href="assets/image/favicon.ico">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/nekolized.css">
+    <link rel="stylesheet" href="/css/nekolized.css">
     <style>
 
     </style>
