--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="refresh" content="0;url=https://nekocia.my.id/">
     <title>Redirecting...</title>
+    <script>
+        window.location.href = 'https://nekocia.my.id/';
+    </script>
 </head>
 <body>
     <p>If you are not redirected automatically, follow this <a href="https://nekocia.my.id/">link</a>.</p>
